Fixed animation error on firefox

--- a/src/app/pages/home/quiz-item/quiz-item.component.scss
+++ b/src/app/pages/home/quiz-item/quiz-item.component.scss
@@ -4,13 +4,14 @@
 }
 
 .card {
-  min-height: 100px;
+  //min-height: 100px;
   box-sizing: border-box;
   perspective: 1000px;
   position: relative;
   transition: transform 0.8s;
   transform-style: preserve-3d;
   cursor: pointer;
+  -moz-backface-visibility: hidden;
 
   &::before {
     content: '';
