--- a/src/app/shared/modal/modal.component.scss
+++ b/src/app/shared/modal/modal.component.scss
@@ -3,8 +3,13 @@
   width: 101%;
   height: 100%;
   inset: 0;
-  backdrop-filter: blur(5px);
   z-index: 4;
+  backdrop-filter: blur(0px);
+  transition: backdrop-filter 0.5s ease-in-out;
+
+  &.active {
+    backdrop-filter: blur(5px);
+  }
 }
 
 .modal {
